src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Crowd_Exchange_About_Me__c</fullName>
        <label>Crowd Exchange About Me</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Crowd_Exchange_Organization__c</fullName>
        <label>Crowd Exchange Organization</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crowd_Exchange_User_Type__c</fullName>
        <label>Crowd_Exchange_User_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publisher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>